--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # CUSTOM by edevbashtool
-#appLog.txt
-#errorLog.txt
+appLog.txt
+errorLog.txt
 
 # Created by https://www.gitignore.io/api/osx,visualstudiocode,windows
 
