--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # CUSTOM by edevbashtool
 appLog.txt
 errorLog.txt
+notes.txt
 
 # Created by https://www.gitignore.io/api/osx,visualstudiocode,windows
 
