ignore all log files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ appLog.txt
 errorLog.txt
 notes.txt
 ignorefolder/
+/include/**/*.log
 
 # Created by https://www.gitignore.io/api/osx,visualstudiocode,windows
 
