--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,10 @@ extra_css:
 
 markdown_extensions:
     - toc:
-        permalink: True
+        title: "Table of Contents"
+        permalink: "#"
+        separator: "-"
+    - admonition:
 
 copyright: Maintained by the <a href="https://github.com/EnthDev">Enthusiastic Development</a> Team.
 google_analytics: ['UA-93782605-1', 'enthdev.github.io/edevshelltool']
